--- a/style.css
+++ b/style.css
@@ -1,6 +1,8 @@
     /* wildcard styling */
     * {
         box-sizing: border-box;
+        margin: 0;
+        
     }
 
     /* padding for whole body */
@@ -56,7 +58,7 @@
         -webkit-box-orient: vertical;
         -webkit-line-clamp: 4;
         overflow: hidden;
-        
+
 
     }
 
@@ -87,7 +89,7 @@
         background-color: white;
         padding: 8px;
         border: 1px solid gray;
-        
+
     }
 
     /* window size 850 width set */
@@ -120,7 +122,7 @@
         ;
 
     }
-    
+
     .image img {
         height: 250px;
         width: 300px;
@@ -140,5 +142,10 @@
     .inner p {
         text-align: center;
         color: black;
-        
+
+    }
+
+    /* Desktops and laptops ----------- */
+    @media only screen and (min-width : 1224px) {
+        /* Styles */
     }
