--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
     /* wildcard styling */
     * {
         box-sizing: border-box;
-        margin: 0;
-        
+        margin: 0 auto;
+
     }
 
     /* padding for whole body */
