--- a/style.css
+++ b/style.css
@@ -7,3 +7,11 @@
     margin-top: 20px;
     float: right;
 }
+
+/* padding for whole body */
+body {
+    padding: 15px;
+    background-color: beige;
+    align-items: center;
+    display: block;
+}
