--- a/style.css
+++ b/style.css
@@ -1,3 +1,8 @@
+* {
+    margin: 0;
+    padding: 0;
+}
+
 #footer li {
     display: inline-flex;
     flex-direction: row;
@@ -16,7 +21,34 @@ body {
     display: block;
 }
 
-img{
+.image img {
     display: block;
-    align-items: center;
+    padding: 20px;
+    margin: 0 auto;
+}
+
+.content img {
+    display: block;
+    padding: 20px;
+    margin: 0 auto;
+}
+
+h1 {
+    font-size: 72pt;
+    text-align: center;
+}
+
+p {
+    text-align: center;
+    font-family: 20pt;
+}
+
+h2 {
+    text-align: center;
+    font-family: 32pt;
+}
+
+h3 {
+    text-align: center;
+    font-family: 28pt;
 }
