--- a/style.css
+++ b/style.css
@@ -34,21 +34,22 @@ body {
 }
 
 h1 {
-    font-size: 72pt;
+    font-size: 42pt;
     text-align: center;
 }
 
 p {
     text-align: center;
-    font-family: 20pt;
+    font-size: 20pt;
 }
 
 h2 {
     text-align: center;
-    font-family: 32pt;
+    font-size: 20pt;
+    padding-top: 20px;
 }
 
 h3 {
     text-align: center;
-    font-family: 28pt;
+    font-size: 28pt;
 }
