--- a/style.css
+++ b/style.css
@@ -36,6 +36,8 @@ body {
 h1 {
     font-size: 90pt;
     text-align: center;
+    padding: 20;
+    background-color: lightseagreen;
 }
 
 p {
@@ -47,6 +49,7 @@ h2 {
     text-align: center;
     font-size: 80pt;
     padding-top: 20px;
+    background-color: lightgreen;
 }
 
 h3 {
