--- a/style.css
+++ b/style.css
@@ -63,5 +63,9 @@ h3 {
     background-color: white;
     padding: 8px;
     border: 1px solid gray;
+    width: 800px;
+    margin: 0 auto;
+    justify-content: space-around;
+    flex-direction: row;
 
 }
