--- a/style.css
+++ b/style.css
@@ -1,7 +1,189 @@
 * {
     margin: 0;
     padding: 0;
+    box-sizing: inherit;
 }
+
+html {
+    box-sizing: border-box;
+    font-size: 62.5%;
+}
+
+header {
+    background-color: lightgoldenrodyellow;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    height:80px;
+
+    padding: 15px 30px;
+    color: grey;
+    position: fixed;
+    width: 100%;
+}
+
+header > a {
+    text-decoration: none;
+    color: lightgoldenrodyellow;
+}
+
+.logo__image--container {
+    width: 120px;
+}
+
+.logo__image--container > img {
+    width: 100%;
+    height: auto;
+    display: block;
+}
+
+.name h1 {
+    text-align: center;
+}
+
+nav {
+    display: block;
+}
+
+nav > ul {
+    display: flex;
+    gap: 30px;
+}
+
+nav > ul > li {
+    list-style: none;
+    padding: 0 10px;
+    font-size: 5.8rem;
+    cursor: pointer;
+}
+
+nav > ul > li > a {
+    text-decoration: none;
+    color: black;
+}
+
+/*Section*/
+
+.abme {
+    background-color: lightgoldenrodyellow;
+    display: flex;
+    height: 100vh;
+    flex: 1;
+    justify-content: center;
+    align-items: center;
+    padding: 0 50px;
+}
+
+.abme-name, .imgja{
+    flex: 1;
+    padding: auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.abme-text > h1 {
+    font-size: 20rem;
+    font-weight: 700;
+    letter-spacing: 1px;
+}
+
+.abme-text > h2 {
+    font-size: 14rem;
+    font-weight: 700;
+    letter-spacing: 1px;
+}
+
+.abme-text > p {
+    font-size: 8rem;
+    font-weight: 300;
+    letter-spacing: 1px;
+    margin-bottom: 30px;
+    padding: 20px 0;
+}
+
+.abme-text > a {
+    display: inline-block;
+    font-weight: 300;
+    padding: auto;
+    font-size: 1.4rem;
+}
+
+.imgja {
+    background-color: lightcyan;
+    display: flex;
+    height: 100vh;
+    flex: 1;
+    justify-content: center;
+    align-items: center;
+    padding: 0 50px;
+}
+
+.imgja-con {
+    width: 100%;
+    overflow: hidden;
+}
+
+.image {
+    width: 100%;
+    height: auto;
+    display: block;
+}
+
+body{
+    display: block;
+}
+
+#port {
+    background-color: lightgoldenrodyellow;
+}
+
+.port >h2 {
+    font-size: 12rem;
+    text-align: center;
+    background-color: lightgoldenrodyellow;
+}
+
+.column {
+  
+    background:oranged;
+    text-align: center;
+    padding: 30px 0;
+    width:50%;
+    margin: 0 auto;
+}
+
+.content {
+    width: 100%;
+    
+    /* background-color: oranged; */
+ }
+
+.content > h3 {
+    color: black;
+    font-size: 6.6rem;
+    font-weight: 800;
+    text-align: center;
+    background-color: bisque;
+
+}
+
+ .content >p {
+    font-size: 4.6rem;
+    font-weight: 600;
+    letter-spacing: 1px;
+    color: black;
+    text-align: center;
+    padding: 0 20px;
+    -webkit-text-stroke: 1px black;
+    background-color: bisque;
+ }
+
+ .content > img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+ }
 
 #footer li {
     display: flex;
@@ -15,74 +197,4 @@
 
 #footer li a {
     color: black;
-}
-
-/* padding for whole body */
-body {
-    padding: 150px;
-    background-color: white;
-    align-items: center;
-    display: block;
-}
-
-.image img {
-    display: block;
-    padding: 20px;
-    margin: 0 auto;
-}
-
-.content img {
-    display: block;
-    padding: 20px;
-    margin: 0 auto;
-}
-
-.content p {
-    text-align: start;
-    font-size: 50pt;
-    display: flexbox;
-    background-color: blanchedalmond;
-}
-
-h2 {
-    text-align: center;
-    font-size: 80pt;
-    padding-top: 20px;
-    background-color: lightgreen;
-}
-
-h3 {
-    text-align: center;
-    font-size: 40pt;
-}
-
-/* content decoration */
-.content {
-    display: flexbox;
-    background-color: lightyellow;
-    border: px black;
-    border-radius: 0.5em;
-
-
-}
-
- /* styling body */
- .container {
-    margin: 0 auto;
-}
-
-.container h1 {
-    color: black;
-    text-align: center;
-    border: 3px salmon;
-    display: flexbox;
-    background-color: lightgreen;
-    font-size: 90pt;
-
-}
-
-.inner p {
-    text-align: start;
-    font-size: 50pt;
-    text-align: center;
 }
